--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@types/react-chartjs-2": "^2.5.7",
     "ant": "^0.2.0",
     "antd": "^5.14.1",
